# docker-dev-ubuntu

./: Dockerfile  main  readme.txt
.devcontainer/: devcontainer.json
sc/: CMakeLists.txt  main.cpp
sc/lib_main/: CMakeLists.txt  lib_main.cpp
sc/main/: CMakeLists.txt  main.cpp
